# Ant

./: .coverage  README.md  final_state.yml  pyproject.toml
ant/: __init__.py  ant.py  board.py  cmd_line.py  dir.py  exceptions  game_object.py  langton_ant.py  main.py  observer.py  subject.py  tile.py
project/: __init__.py  ant.py  board.py  main.py  tile.py
tests/: test_ant.py  test_board.py  test_dir.py  test_langton_ant.py
